# ReservoirComputing

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  esn.py  final_config_251229 (2).pkl  index.html  metrics.py  mkdocs.yml  optimisation.py  pyproject.toml  requirements.txt  single_worm (4).ipynb  spectra_list.pkl  worm_a.ipynb
api/esn/: index.html
api/optimisation/: index.html
data/: output.txt  readme.txt  skeleton_1.mat  skeleton_10.mat  skeleton_11.mat  skeleton_13.mat  skeleton_14.mat  skeleton_15.mat  skeleton_16.mat  skeleton_17.mat  skeleton_18.mat  skeleton_19.mat  skeleton_2.mat  skeleton_20.mat  skeleton_21.mat  skeleton_22.mat  skeleton_23.mat  skeleton_24.mat  skeleton_25.mat  skeleton_26.mat  skeleton_27.mat  skeleton_28.mat  skeleton_29.mat  skeleton_3.mat  skeleton_30.mat  skeleton_4.mat  skeleton_5.mat  skeleton_6.mat  skeleton_7.mat  skeleton_8.mat  skeleton_9.mat
docs/: index.md
docs/api/: esn.md  optimisation.md
examples/: best_esn.npz  double_pendulum.ipynb  logistic_map.ipynb  lorenz_example.ipynb  lorenz_train.ipynb  usage_examples.ipynb
figure/: best_without_cle.pkl  evaluate_dws.py  fig1_logistic_map.ipynb  fig2_standard_map.ipynb  fig3_pendulum_abc.ipynb  fig3_pendulum_d.ipynb  fig4_worm.ipynb  fig4_worm_bcd.ipynb
figure/worm/: aggregate_resampled.py  animation.ipynb  evaluate_dws_resampled.py  fig4_worm_bc.ipynb  fig4_worm_bcd.ipynb  lyap_resampled.py  lyapunov_top.py  plot_dt_scaling.py  plot_worm.py  plot_worm_all.py  plot_worm_resampled.py  train_esns.py
rc/: __init__.py  analysis.py  dynamics.py  esn.py  metrics.py  optimisation.py
results_data/: dist_log_20251110_15.npy  dist_log_20260302_04.npy  dist_sta_20251111_01.npy  dist_sta_20260302_12.npy  dist_sta_part_20251111_00.npy  dist_sta_part_20260302_07.npy  dist_sta_part_20260304_22.npy  full_dp_res.npy  kilist_log_20251110_15.npy  kilist_sta_part_20251111_00.npy  les_log_20251209_04.npy  lyap_exps_pendulum_partial.npy  partial_dp_res.npy  s_resampled.npy  spctrums_dp_pendulum.pkl  spectrum.pkl  spectrum_resampled.pkl  vpt_log_20251110_15.npy  vpt_sta_20251111_01.npy  vpt_sta_part_20251111_00.npy
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: __init__.py  test_esn.py
