[project]
name = "rc"
version = "0.1.0"
description = "Echo State Network (ESN) library for reservoir computing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "POT>=0.9",
    "joblib>=1.2",
    "ax-platform>=0.3",
    "numba>=0.57",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rc = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["esn"]
