[project]
name = "rc"
version = "0.1.0"
description = "Echo State Network (ESN) library for reservoir computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "reservoir-computing",
    "echo-state-network",
    "esn",
    "machine-learning",
    "time-series",
    "dynamical-systems",
    "chaos",
    "lyapunov",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "POT>=0.9",
    "joblib>=1.2",
    "ax-platform>=0.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rc"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
rc = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

