[project]
name = "pyreservoir"
version = "0.1.0"
description = "Echo State Network library for reservoir computing (imported as `rc`)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "reservoir-computing",
    "echo-state-network",
    "esn",
    "machine-learning",
    "time-series",
    "dynamical-systems",
    "chaos",
    "lyapunov",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "ax-platform>=0.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "plotly",
    "POT>=0.9",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/oist/ReservoirComputing"
Documentation = "https://oist.github.io/ReservoirComputing/"
Repository = "https://github.com/oist/ReservoirComputing"
Issues = "https://github.com/oist/ReservoirComputing/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rc"]

[tool.hatch.build.targets.sdist]
include = [
    "rc/",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "pyproject.toml",
]

